feat: auto-discover recorded macros in Macro Tools settings
The settings table now automatically lists all macros from
ActionMacroManager on open, merging with persisted registrations.
New macros appear as disabled by default. A "Refresh" button
re-scans for macros recorded while the settings panel is open.
Removes the manual "Register Macro..." / "Remove" workflow.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>